# strukturen-ml

./: .gitignore  Dockerfile  Readme.md  cache.py  lambda.py  lambda_function.py  main.py  models.py  orgchart.py  orgchart_entry.py  package-lock.json  package.json  pyproject.toml  queries.py  requirements.txt  serverless.yaml  sns.py  sns_handler.py  utils.py
.github/workflows/: codeql-analysis.yml  deployment.yml
model-last/: config.cfg  meta.json
model-last/ner/: cfg  model  moves
model-last/vocab/: strings.json
