[tool.poetry]
name = "orgchart-ml"
version = "0.1.0"
description = ""
authors = ["Lilith Wittmann"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.26.0"
fastapi = "^0.70.0"
pdfplumber = "^0.5.28"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
gql = "^2.0.0"
opencv-python = "^4.5.4"
spacy = "^3.2.1"
Shapely = "^1.8.0"
scipy = "^1.7.3"
colorthief = "^0.2.1"
magnum = "^13.0.0"
sentry-sdk = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
